# imgToolKit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
src/imgtoolkit/: main.py
src/imgtoolkit/core/: README.md
src/imgtoolkit/io/: README.md
src/imgtoolkit/utils/: README.md
tests/: sample_test.py
